chore: updated docs and dependencies
